[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vision-servo-lab"
version = "0.1.0"
description = "Visual-feedback experiments for robotic servo dynamics research."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "VisionServoLab contributors" }]
keywords = ["robotics", "visual-servoing", "servo", "dynamics", "simulation"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/ans0ld2/VisionServoLab"
Source = "https://github.com/ans0ld2/VisionServoLab"
Issues = "https://github.com/ans0ld2/VisionServoLab/issues"

[tool.setuptools.packages.find]
where = ["src"]

